<resources>
    <string name="app_name">慕课网</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginguide1">"注册登录后免费享用以下服务"</string>
    <string name="loginguide2">下载课程到手机</string>
    <string name="loginguide3">没有网络，一样随时随地想学就学</string>
    <string name="loginguide4">记录学习过程</string>
    <string name="loginguide5">课程有更新，提醒及时学习</string>
    <string name="loginguide6">即时发送消息</string>
    <string name="loginguide7">与朋友、大牛一起学习，一起交流</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码？</string>
    <string name="login_lable">登录</string>
    <string name="login_user_create">慕课网账号创建中</string>
    <string name="loginguide">直接进入</string>
    <string name="update_dialog_title">更新</string>
    <string name="update_cancel">取消更新</string>
    <string name="update_backgrounder">后台运行</string>
    <string name="update_dialog_content">正在升级新版本</string>
    <string name="update_download_over">下载完成</string>
    <string name="update_download_cancel">取消升级</string>
    <string name="update_failed">更新失败</string>
    <string name="version_label">Version %1$s</string>
    <string name="copyright_label">Copyright © 2015 imooc.com All rights reserved.</string>
    <string name="step_over">跳过</string>
    <string name="about_me_tip">这位童鞋很懒，什么也没有留下～</string>
    <string name="nickname_label">昵称</string>
    <string name="nickname_edit_lable">修改昵称</string>
    <string name="nickname_null_tip">昵称不能为空！</string>
    <string name="nickname_error_tip">昵称2-18位中英文、数字及下划线！</string>
    <string name="people_learn_lable">学习</string>
    <string name="people_experience_lable">经验</string>
    <string name="people_mycourse_lable">关注的课程</string>
    <string name="people_mycourse_title">我关注的课程</string>
    <string name="people_myplan_lable">我的计划</string>
    <string name="people_mynews_lable">我的消息</string>
    <string name="people_collectarticle_lable">收藏的文章</string>
    <string name="people_mynote_lable">我的笔记</string>
    <string name="people_myhistory_lable">最近学习</string>
    <string name="person_myarticle_lable">我收藏的文章</string>
    <string name="icon_man"></string>
    <string name="icon_arrow_back"></string>
    <string name="play_normal">1.0X</string>
    <string name="play_speed_up1p7">1.7X</string>
    <string name="play_speed_up">1.5X</string>
    <string name="play_speed_up1p3">1.3X</string>
    <string name="play_display_normal">标清</string>
    <string name="get_video_error">播放内容获取失败！</string>
    <string name="video_init_failed">播放器初始化失败,无法进行视频播放</string>
    <string name="video_load_failed">视频加载失败，请检查网络</string>
    <string name="icon_pause"></string>
    <string name="icon_fullscreen"></string>
    <string name="teacher_other_courses">老师的全部课程</string>
    <string name="plan_label">相关计划</string>
    <string name="setting">设置</string>
    <string name="login_click">点击登录</string>
    <string name="outnumber_input">超过规定数字</string>
    <string name="only_wifi_download">允许非WIFI网络播放/下载视频</string>
    <string name="only_wifi_download_illustrate">请慎重选择开启 避免过度使用流量</string>
    <string name="push_label">推送通知</string>
    <string name="sdcard_label">离线下载路径设置</string>
    <string name="push_setting_warm">关闭推送，您将不能收到任何通知！</string>
    <string name="push_setting_allday_lable">接收推送通知</string>
    <string name="push_setting_time">修改时间</string>
    <string name="push_setting_timeshow">%1$s-%2$s</string>
    <string name="suggest_label">意见反馈</string>
    <string name="suggest_pic_chooser">请选择图片格式上传</string>
    <string name="update_label">版本更新</string>
    <string name="find_newversion">发现新版本</string>
    <string name="update_later">以后再说</string>
    <string name="update_now">现在升级</string>
    <string name="about_label">关于慕课</string>
    <string name="grade_label">给我评分</string>
    <string name="qq_group_label">QQ群：178759087</string>
    <string name="clear_label">清除缓存</string>
    <string name="logout_label">退出登录</string>
    <string name="logout_isOK_lable">确定要登出账号吗？</string>
    <string name="video_auto_play">视频自动播放</string>
    <string name="icon_keyboard_arrow_right"></string>
    <string name="app_recommend">欢迎动画</string>
    <string name="no_contact">暂无联系人</string>
    <string name="default_text">http://blog.csdn.net/xieyupeng520/article/details/49232925</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_enter">完成</string>
    <string name="menu_del">删除</string>
    <string name="menu_sett">结算</string>
    <string-array name="baeeage_array">
        <item>颓废不是我的调调，积极才是我的王道</item>
        <item>最让人感动的不是强者的保护，而是弱者的坚强</item>
        <item>轻轻浅浅的笑，天马行空的心</item>
        <item>I love you, 谢宇鹏！~</item>
        <item>做好人，做好事；做明白人，做明白事！</item>
        <item>认真你就赢了</item>
        <item>我这么努力你都不赞我</item>
        <item>等你一切都准备好了，或许你就没动力了</item>
        <item>我的博客地址：http://blog.csdn.net/xieyupeng520</item>
        <item>为什么毕业过了几年以后，同学之间的差距变的那么大？</item>
        <item>本来差距就大，不过学校就那么点事，不显而已。</item>
        <item>w1dyjtx!</item>
        <item>加油加油加油！</item>
        <item>这是一个弹幕的例子</item>
        <item>祝你生日快乐~</item>
        <item>本应用链接：http://blog.csdn.net/xieyupeng520/article/details/49232925</item>
    </string-array>
</resources>