<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_guide_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="25dp"
        android:paddingTop="78dp"
        android:text="@string/loginguide1"
        android:textColor="@color/white_FFFFFF"
        android:textSize="22sp" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="1dp"
        android:background="@color/gray_404040"
        android:contentDescription="@null"
        android:paddingTop="25dp" />

    <TextView
        style="@style/text_red_f01400_16sp_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/loginguide2" />

    <TextView
        style="@style/text_white_ffffff_12sp_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/loginguide3" />

    <TextView
        style="@style/text_red_f01400_16sp_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/loginguide4" />

    <TextView
        style="@style/text_white_ffffff_12sp_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/loginguide5" />

    <TextView
        style="@style/text_red_f01400_16sp_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/loginguide6" />

    <TextView
        style="@style/text_white_ffffff_12sp_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/loginguide7" />

    <Button
        android:id="@+id/register"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/loginguide_button_bg"
        android:text="@string/register"
        android:textColor="@color/white_FFFFFF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/guide_login_bg"
        android:text="@string/login_lable"
        android:textColor="@color/red_F01400"
        android:textSize="16sp" />

    <Button
        android:id="@+id/go"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/guide_go_bg"
        android:text="@string/loginguide"
        android:textColor="@color/gray_808080"
        android:textSize="12sp" />
</LinearLayout>
