<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mooc="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_FFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_web_topbar"
        style="@style/topbar_style" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="6dp"
            android:src="@drawable/back_icon" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="设置"
            android:textSize="20sp"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/barrage_view"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_54dp"
                android:background="@drawable/grey_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp">

                <com.open.imooc.widght.McCircleImageView
                    android:id="@+id/headimage"
                    android:layout_width="@dimen/dimen_40dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/personal_default_user_icon" />

                <TextView
                    android:id="@+id/nickname_tv"
                    style="@style/text_gray_808080_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_toRightOf="@+id/headimage"
                    android:gravity="center_vertical"
                    android:text="@string/nickname_label" />

                <com.open.imooc.widght.MCIconFontView
                    android:id="@+id/image1"
                    style="@style/text_gray_c0c0c0_24sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                     />

                <TextView
                    android:id="@+id/login_btn"
                    style="@style/text_gray_808080_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:layout_toLeftOf="@+id/image1"
                    android:gravity="center_vertical"
                    android:text="@string/login_click"
                    android:drawableRight="@drawable/right_icon"/>
            </RelativeLayout>

            <View
                android:id="@+id/line1"
                style="@style/divider_line_1px"
                android:layout_width="fill_parent" />

            <RelativeLayout
                android:id="@+id/baeeage"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/grey_item_bg"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp">

                <TextView
                    style="@style/text_gray_404040_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="弹幕测试" />

                <TextView
                    android:id="@+id/clear_size"
                    style="@style/text_gray_808080_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/invest_friend"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/grey_item_bg"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp">

                <TextView
                    style="@style/text_gray_404040_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="邀请好友" />

                <com.open.imooc.widght.MCIconFontView
                    style="@style/text_gray_c0c0c0_24sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/icon_keyboard_arrow_right"
                    android:background="@drawable/right_icon"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/wifi"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/grey_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp">

                <!--<ToggleButton
                    android:id="@+id/wifi_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    mooc:sildeButtonOff="@drawable/slide_button_off_bg"
                    mooc:sildeOffBg="@drawable/slide_off_bg"
                    mooc:slideButtonOn="@drawable/slide_button_on_bg"
                    mooc:slideOnBg="@drawable/slide_on_bg" />-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_gray_404040_14sp_style"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/only_wifi_download" />

                    <TextView
                        style="@style/text_gray_c0c0c0_12sp_style"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/only_wifi_download_illustrate" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/autoplay"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/grey_item_bg"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp">

               <!-- <com.mooc.imooc.ui.view.MCSlideButton
                    android:id="@+id/autoplay_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    mooc:sildeButtonOff="@drawable/slide_button_off_bg"
                    mooc:sildeOffBg="@drawable/slide_off_bg"
                    mooc:slideButtonOn="@drawable/slide_button_on_bg"
                    mooc:slideOnBg="@drawable/slide_on_bg" />-->

                <TextView
                    style="@style/text_gray_404040_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/video_auto_play" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sdcard"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/grey_item_bg"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_sdcard"
                    style="@style/text_gray_404040_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/sdcard_label" />

                <com.open.imooc.widght.MCIconFontView
                    style="@style/text_gray_c0c0c0_24sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/icon_keyboard_arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/push"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/grey_item_bg"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp">

                <TextView
                    android:id="@+id/tv_push"
                    style="@style/text_gray_404040_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/push_label" />

                <com.open.imooc.widght.MCIconFontView
                    style="@style/text_gray_c0c0c0_24sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/icon_keyboard_arrow_right"
                    android:background="@drawable/right_icon"/>
            </RelativeLayout>

            <View
                android:id="@+id/line2"
                style="@style/divider_line_1px"
                android:layout_width="fill_parent" />


            <RelativeLayout
                android:id="@+id/update"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/grey_item_bg"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp">

                <TextView
                    android:id="@+id/upgrade_label"
                    style="@style/text_gray_404040_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/update_label" />

                <com.open.imooc.widght.MCIconFontView
                    style="@style/text_gray_c0c0c0_24sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/icon_keyboard_arrow_right"
                    android:background="@drawable/right_icon"/>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/about"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/grey_item_bg"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp">

                <TextView
                    style="@style/text_gray_404040_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/about_label" />

                <com.open.imooc.widght.MCIconFontView
                    style="@style/text_gray_c0c0c0_24sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/icon_keyboard_arrow_right"
                    android:background="@drawable/right_icon"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/best_recommend"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_45dp"
                android:background="@drawable/grey_item_bg"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp">

                <TextView
                    style="@style/text_gray_404040_14sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/app_recommend" />

                <com.open.imooc.widght.MCIconFontView
                    style="@style/text_gray_c0c0c0_24sp_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/icon_keyboard_arrow_right"
                    android:background="@drawable/right_icon"/>
            </RelativeLayout>

            <View
                android:id="@+id/line4"
                style="@style/divider_line_1px"
                android:layout_width="fill_parent" />

            <RelativeLayout
                android:id="@+id/logout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:layout_marginLeft="@dimen/dimen_30dp"
                android:layout_marginRight="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:background="@drawable/setting_logout_bg"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/logout_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/logout_label"
                    android:textColor="@color/red_F01400"
                    android:textSize="@dimen/dimen_16sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
